# LLM-CHATBOT-FOR-SOCIAL-MEDIA

./: .gitignore  render.yaml
demo-frontend/: README.md  (+5 more)
kinderuniversiteit/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  pyrightconfig.json  requirements-dev.txt  requirements.txt
kinderuniversiteit/alembic/: env.py
kinderuniversiteit/alembic/versions/: 20260622_0001_initial_schema.py  20260623_0002_analytics_columns.py  20260623_0003_full_schema.py
kinderuniversiteit/app/: main.py
kinderuniversiteit/app/adapters/manychat/: response_builder.py
kinderuniversiteit/app/adapters/webhooks/: manychat_webhook.py
kinderuniversiteit/app/analytics/: analytics_service.py  metrics.py  report_service.py
kinderuniversiteit/app/api/dependencies/: database.py  services.py
kinderuniversiteit/app/api/v1/: router.py
kinderuniversiteit/app/core/: config.py  constants.py  exceptions.py  logging.py
kinderuniversiteit/app/knowledge/: chunker.py  document_ingestion.py
kinderuniversiteit/app/monitoring/: health.py
kinderuniversiteit/app/prompts/: prompt_manager.py  system_prompt.md
kinderuniversiteit/data/chroma/: chroma.sqlite3
kinderuniversiteit/docker/: Dockerfile  docker-compose.yml
kinderuniversiteit/docs/: manychat_integration.md  schema.md
kinderuniversiteit/nginx/: nginx.conf
kinderuniversiteit/scripts/: ingest.py  migrate.sh  seed_knowledge.py
kinderuniversiteit/tests/integration/: test_webhook_endpoint.py
kinderuniversiteit/tests/regression/: latest_report.json  run_regression.py  test_cases.py
(+80 files in other folders)
