[tool.poetry]
name = "kinderuniversiteit-ai"
version = "1.0.0"
description = "Production AI customer support assistant for Kinderuniversiteit"
authors = ["Kinderuniversiteit Team"]
python = "^3.12"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.0"
uvicorn = { extras = ["standard"], version = "^0.30.0" }
pydantic = "^2.8.0"
pydantic-settings = "^2.4.0"
sqlalchemy = { extras = ["asyncio"], version = "^2.0.0" }
asyncpg = "^0.29.0"
alembic = "^1.13.0"
openai = "^1.50.0"
chromadb = "^0.5.0"
redis = { extras = ["hiredis"], version = "^5.0.0" }
httpx = "^0.27.0"
tenacity = "^9.0.0"
structlog = "^24.4.0"
python-dotenv = "^1.0.0"
jinja2 = "^3.1.0"
pypdf = "^4.3.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.0"
pytest-cov = "^5.0.0"
httpx = "^0.27.0"
ruff = "^0.6.0"
mypy = "^1.11.0"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.mypy]
python_version = "3.12"
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.pyright]
venvPath = "."
venv = ".venv"
pythonVersion = "3.12"
typeCheckingMode = "basic"
reportMissingModuleSource = "none"
